<resources>
    <string name="app_name">iSense</string>
    <string name="ct_btn_1">Élelmiszer</string>
    <string name="ct_btn_2">Háztartás</string>
    <string name="ct_btn_3">Takarító szerek</string>
    <string name="ct_btn_4">Higiénia</string>
    <string name="recipe_btn">Receptek</string>
    <string name="settings_btn">Beállítások</string>
    <string name="shopping_list_btn">Bevásárló lista</string>
    <string name="title">Név</string>
    <string name="category">Kategória</string>
    <string name="quantity">Mennyiség</string>
    <string name="unit">Mértékegység</string>
    <string name="last_edit">Szerkesztés</string>
    <string name="add_new_item">Hozzáadás</string>
    <string name="add_item">Új elem hozzáadása</string>
    <string name="cancel">Mégsem</string>
    <string name="save">Mentés</string>

    <string name="ct_btn_6">Édességek</string>
    <string name="ct_btn_7">Zöldség/gyümölcs</string>
    <string name="ct_btn_8">Sütés/főzés</string>
    <string name="ct_btn_9">Fűszerek</string>
    <string name="category_hint">Kategória</string>
    <string name="category_dessert">Desszert</string>
    <string name="category_cooked_food">Főtt étel</string>
    <string name="category_regular_food">Hideg étel</string>
    <string name="category_roast_food">Sültek</string>
    <string name="category_soup">Levesek</string>
    <string name="category_chicken_food">Csirke</string>
    <string name="category_pork_food">Sertés</string>
    <string name="category_main_dishes">Főétel</string>
    <string name="add_recipe_title">Recept hozzáadása</string>
    <string name="add_recipe_name">Recept neve</string>
    <string name="add_recipe_cook_time">Elkészítési idő</string>
    <string name="add_recipe_servings">Adag</string>
    <string name="add_recipe_ingredients">Hozzávalók</string>
    <string name="add_recipe_cooking">Elkészítési mód</string>
    <string name="food_with_chicken">Csirkéből készült ételek</string>
    <string name="food_with_pork">Sertéshúsból készült ételek</string>
    <string name="homepage_inventory">Leltár</string>
    <string name="homepage_intro">Üdvözöllek!\nKérlek válassz menüpontot!</string>
    <string name="add_to_the_shopping_list">Bevásárló listához adás</string>

    <string name="required">A mezők kitöltése kötelező!</string>
    <string name="already_exist">Az elem már létezik az adatbázisban!</string>
    <string name="item_added">Sikeres hozzáadás!</string>
    <string name="item_deleted">Sikeresen törölve!</string>
    <string name="item_updated">Sikeresen frissítve!</string>
    <string name="error">Hiba történt, próbáld újra később</string>



    <string-array name="category_array">
        <item>Főétel</item>
        <item>Leves</item>
        <item>Desszert</item>
        <item>Csirke</item>
        <item>Sertés</item>
        <item>Hideg ételek</item>
        <item>Sültek</item>
    </string-array>

</resources>