<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:state_focused="true" android:drawable="@color/pink_light"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:background="@drawable/rounded_corner_background"
        android:padding="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/add_recipe_title"
                android:textColor="@color/dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColorHint="@color/dark"
                android:hint="@string/add_recipe_name"
                android:textColor="@color/dark" />

            <EditText
                android:id="@+id/editTextCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColorHint="@color/dark"
                android:hint="@string/add_recipe_cook_time"
                android:textColor="@color/dark" />

            <EditText
                android:id="@+id/editTextServingSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColorHint="@color/dark"
                android:hint="@string/add_recipe_servings"
                android:textColor="@color/dark" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_border"
                android:hint="@string/category_hint"
                android:textColorHint="@color/dark"
                android:entries="@array/category_array" />

            <MultiAutoCompleteTextView
                android:id="@+id/editTextIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark"
                android:hint="@string/add_recipe_ingredients"

                android:minLines="2"
                android:textColor="@color/dark" />

            <EditText
                android:id="@+id/editTextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark"
                android:hint="@string/add_recipe_cooking"
                android:minLines="5"
                android:textColor="@color/dark" />

            <ImageView
                android:id="@+id/imageViewRecipePhoto"
                android:layout_width="108dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onImageUploadClick"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/item_cancel_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8sp"
                    android:layout_weight="1"
                    android:background="@drawable/cancel_button"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/item_save_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/save_button"
                    android:text="@string/save"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>