<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="363dp"
        android:layout_height="94dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/homepage_intro"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="297dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/homepage_image" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/inventory_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_background"
            android:text="@string/homepage_inventory" />

        <Button
            android:id="@+id/recipes_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_background"
            android:text="@string/recipe_btn" />

        <Button
            android:id="@+id/shopping_list_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_background"
            android:text="@string/shopping_list_btn" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_background"
            android:text="@string/settings_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>