<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="15dp">

    <LinearLayout
        android:id="@+id/food_category"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/cv_border"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/category_household"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_food"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/food_icon" />

        <TextView
            android:id="@+id/textView_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ct_btn_1"
            android:textColor="@color/dark"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_household"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/cv_border"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toTopOf="@+id/category_cleaning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/household_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ct_btn_2"
            android:textColor="@color/dark"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_cleaning"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/cv_border"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toTopOf="@+id/category_hygiene"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_cleaning"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.8"
            app:srcCompat="@drawable/cleaning" />

        <TextView
            android:id="@+id/textView_cleaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ct_btn_3"
            android:textColor="@color/dark"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_hygiene"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/cv_border"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_hygiene"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.6"
            app:srcCompat="@drawable/hygiene_icon" />

        <TextView
            android:id="@+id/textView_hygiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ct_btn_4"
            android:textColor="@color/dark"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/homepage_inventory"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>